2005-07-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Xerox Workcentre
	  470cx. Added link for Canon DR-2080C.
	* backend/Makefile.in: libsane and documentation is installed
	  correctly again.
	* acinclude.m4 configure configure.in: Avoid error messages in
	  locking test. Make sure that io/cam/cam.h header file will be
	  detected correctly. 

2005-07-29  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* doc/sane-teco2.man: text update
	  doc/descriptions/teco2.desc: update status VM3564
	  doc/teco/teco2.txt: text added
	  backend/teco2.c: removed teco_request_sens command for VM3564 (bug)
	  backend/teco2.h: text update

2005-07-29  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added various Epson IDs from Olaf
	Meeuwissen; reodered some misplaced Epson entries.

2005-07-29  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added Visioneer OneTouch 7300
	(0x0444,0x0211), from Derek J Frye.

2005-07-25  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions-external/epkowa.desc: Updated according to
	  the info provided by  Olaf Meeuwissen <olaf.meeuwissen@avasys.jp>

2005-07-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/brother2.desc: Brother DCP 7025 is
	  reported to work (bug #301960).
	* doc/descriptions-external/hp_rts88xx.desc: Moved unsupported
	  devices to unsupported.desc.
	* doc/descriptions-external/hp3770.desc
	  doc/descriptions-external/hp8200.desc: Added external hp3770 and
	  hp8200 backends.
	* doc/descriptions/unsupported.desc: Added unsupported scanners
	  from hp_rts88xx.desc. Removed HP ScanJet 3770 (now in hp3770
	  backend). Added Lexmark X75 PrinTrio.
	
2005-07-22  Giuseppe Sacco <eppesuig@debian.org>

	* italian translation update

2005-07-22  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added HP ScanJet 7400C (0x03f0,
	0x0801), from Thomas Nadolny.
