@@ -1,3 +1,8 @@
+2005-07-30  Karl Heinz Kremer <khk@khk.net>
+
+	* backend/epson_usb.c: Applied Olaf Meuwissen's patch to add
+	  new device IDs. 
+
 2005-07-30  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* doc/descriptions/unsupported.desc: Added Xerox Workcentre
